# Stellara_Contracts

./: ACCEPTANCE_CRITERIA_VERIFICATION.md  PR_DESCRIPTION.md  SIEM_PR_DESCRIPTION.md  SIEM_PULL_REQUEST.md  package-lock.json  package.json
.github/workflows/: load-testing.yml
Backend/: .env.example  README.md  build_errors_3.txt  docker-compose.yml  package-lock.json  package.json  prisma.config.ts  tsconfig.build.json
Backend/insurance/: claim.service.ts  insurance.controller.ts
Backend/prisma/: schema.prisma  seed-plans.ts
Backend/sandbox/: sandbox.module.ts  sandbox.service.ts
Backend/src/: app.module.ts  database.module.ts  main.ts
Backend/src/affiliate/: README.md  affiliate.module.ts
Backend/src/api/: versioning.interceptor.ts  versioning.module.ts  versioning.service.ts
Backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
Backend/src/config/: env.validation.ts
Backend/src/config-manager/: config-manager.controller.ts  config-manager.module.ts
Backend/src/database/: postgres.service.ts
Backend/src/index-analysis/: index-analysis.controller.ts  index-analysis.module.ts  index-analysis.service.ts
Backend/src/indexer/: indexer.module.ts  indexer.service.ts
Backend/src/institutional-custody/: institutional-custody.controller.ts  institutional-custody.module.ts  institutional-custody.spec.ts  run-tests.js
Backend/src/kyc/: kyc.controller.ts  kyc.module.ts  kyc.service.ts  types.ts
Backend/src/lifecycle/: application-state.service.ts  health.controller.ts  lifecycle.module.ts  (+1 more)
Backend/src/matching-engine/: Cargo.toml
(+138 files in other folders)
