[package]
name = "matching-engine"
version = "0.1.0"
edition = "2021"
authors = ["Stellara Team"]
description = "High-performance limit order book matching engine"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "matching-engine"
path = "src/main.rs"

[dependencies]
# Core data structures
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "5.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Unique IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Performance metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# WebSocket for real-time updates
tokio-tungstenite = "0.21"

# Redis for state management
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "matching_benchmark"
harness = false
